<resources>
    <string name="app_name">SmartCalculator</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="power">^</string>
    <string name="equal">=</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="tan">tan</string>
    <string name="ctan">ctan</string>
    <string name="ln">ln</string>
    <string name="dot">.</string>
    <string name="log">log</string>
    <string name="sqrt">sqrt</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>
    <string name="back">BACK</string>
    <string name="incorrect_input">Incorrect input!</string>
    <string name="nothing_calculate">Nothing to calculate!</string>
    <string name="calculated">Calculated successfully!</string>
    <string name="next">Next-></string>
    <string name="cleared">Cleared!</string>
    <string name="to_next">Next!</string>
</resources>
