<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jeremy.smartcalculator.views.activities.SimpleCalculatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">
        <pl.droidsonroids.gif.GifImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/dark_red_gif"
            android:background="@android:color/black"/>
        <pl.droidsonroids.gif.GifImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/dark_red_gif"
            android:background="@android:color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layoutScreen"
        android:weightSum="2"
        android:layout_marginTop="8dp">
        <TextView
            android:background="@drawable/input"
            android:id="@+id/txtScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:maxLength="16"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorAccent"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:typeface="serif" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="26sp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:id="@+id/btnBack"
            android:layout_marginRight="8dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layoutScreen"
        android:orientation="vertical"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="8dp">
            <Button
                android:textColor="@color/colorAccent"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnSeven"
                android:textSize="26sp"
                android:text="@string/seven" />
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnEight"
                android:text="@string/eight" />
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnNine"
                android:text="@string/nine"/>
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnDivide"
                android:text="@string/divide"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="8dp">
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnFour"
                android:text="@string/four"/>
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnFive"
                android:text="@string/five" />
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnSix"
                android:text="@string/six" />
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnMultiply"
                android:text="@string/multiply" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="8dp">
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnOne"
                android:text="@string/one" />
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnTwo"
                android:text="@string/two" />
            <Button
                android:textSize="26sp"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnThree"
                android:text="@string/three" />
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnSubtract"
                android:text="@string/minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="8dp">
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnDot"
                android:text="@string/dot" />
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnZero"
                android:text="@string/zero" />
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnClear"
                android:text="@string/clear" />
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnAdd"
                android:text="@string/plus" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="8dp">
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnCos"
                android:text="@string/cos" />
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnSin"
                android:text="@string/sin" />
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnTan"
                android:text="@string/tan" />
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnCtan"
                android:text="@string/ctan"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="8dp">
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnLn"
                android:text="@string/ln" />
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnLog"
                android:text="@string/log" />
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnSqrt"
                android:text="@string/sqrt" />
            <Button
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/btnPower"
                android:text="@string/power" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="46sp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/button"
                android:id="@+id/btnEqual"
                android:text="@string/equal" />
            <Button
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/button"
                android:id="@+id/btnNext"
                android:text="@string/next" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>